--- a/SWD/SWD/Content/ContentWindow.xaml
+++ b/SWD/SWD/Content/ContentWindow.xaml
@@ -218,7 +218,7 @@
                                Background="{Binding HeaderPrimary}"
                                Margin="0,0,0,0"
                         />
-                        <Image x:Name="imgFolderRefresh" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Top" Source="../Icons/refresh.png" Width="15" Height="15" Margin="15,26,25,0" MouseDown="imgFolderRefresh_MouseDown"/>
+
 
                         <Grid Grid.Row="5" Grid.ColumnSpan="2" Margin="5,0">
                             <Grid.ColumnDefinitions>
@@ -238,6 +238,9 @@
                             </Button>
                             <Button x:Name="btnInsideFolderDelete" Grid.Column="2" Grid.Row="1" FontSize="20" Width="35" Height="35" Click="btnInsideFolderDelete_Click" FontWeight="ExtraBold"  Margin="0,0,0,0">
                                 <TextBlock Text="-" Margin="0,-4,0,0" />
+                            </Button>
+                            <Button x:Name="btnFolderRefresh" Grid.Column="2" Grid.Row="2" FontSize="20" Width="35" Height="35" Click="btnFolderRefresh_Click" FontWeight="ExtraBold"  Margin="0,0,0,0">
+                                <Image x:Name="imgFolderRefresh" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Top" Source="../Icons/refresh.png" Width="20" Height="20"/>
                             </Button>
                         </Grid>
 
@@ -530,6 +533,7 @@
                             <MenuItem x:Name="miDelete" Header="Delete" Click="DeleteComponent" Visibility="Collapsed"/>
                             <Separator x:Name="cmActionSeparator" Visibility="Collapsed" />
                             <MenuItem x:Name="miText" Header="Text (simple)" Click="AddComponent"/>
+                            <MenuItem x:Name="miButton" Header="Button" Click="AddComponent"/>
                             <MenuItem x:Name="miImage" Header="Image" Click="AddComponent"/>
                             <MenuItem x:Name="miCode" Header="Code" Click="AddComponent"/>
                         </ContextMenu>
